partman-partitioning (61) UNRELEASED; urgency=low

  [ Jérémy Bobbio ]
  * Update to the new debconf_select interface.
    Requires partman-base (>= 124).
  * Use cdebconf's new column alignment feature for active_partition.
    Requires partman-base (>= 124).

 -- Jérémy Bobbio <lunar@debian.org>  Fri, 18 Jul 2008 16:30:58 +0000

partman-partitioning (60) unstable; urgency=low

  [ Colin Watson ]
  * Silence warning in case $id/options already exists.
  * Move 'local' down a line in create_new_partition in order to work
    properly with bash, which initialises local variables without an
    accompanying assignment to empty rather than to any previous value.
  * When creating a new filesystem, set the default mount options to the
    contents of /lib/partman/mountoptions/${fs}_defaults if it exists.
  * Use explicit dummy variables in create_new_partition rather than
    overriding $type, $size, et al.

  [ Jérémy Bobbio ]
  * Disable "resize" and "delete" for partitions on "loop" partition tables.
    This will prevent unusable behaviour on RAID, crypto and LVM partitions.
    (Closes: #318228, #417973)

  [ Robert Millan ]
  * Support for creating a BIOS boot partition in GPT (later used by GRUB).
    (Closes: #488111)

  [ Updated translations ]
  * Belarusian (be.po) by Pavel Piatruk
  * Bulgarian (bg.po) by Damyan Ivanov
  * Czech (cs.po) by Miroslav Kure
  * Dzongkha (dz.po) by Tenzin Dendup
  * Esperanto (eo.po) by Serge Leblanc
  * Basque (eu.po) by Piarres Beobide
  * Finnish (fi.po) by Esko Arajärvi
  * French (fr.po) by Christian Perrier
  * Galician (gl.po) by Jacobo Tarrio
  * Gujarati (gu.po) by Kartik Mistry
  * Italian (it.po) by Milo Casagrande
  * Japanese (ja.po) by Kenshi Muto
  * Korean (ko.po) by Changwoo Ryu
  * Lithuanian (lt.po) by Kęstutis Biliūnas
  * Marathi (mr.po) by Sampada
  * Dutch (nl.po) by Frans Pop
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
  * Portuguese (pt.po) by Miguel Figueiredo